# chataigne

./: CONTRIBUTE.md  Cargo.toml  README.md
.github/workflows/: cd.yml
src/: cli.rs  main.rs  pkg.rs  pkg_tools.rs  settings.rs
src/cmd/: gcc.rs  git.rs  mod.rs  new.rs
src/common/: checksum.rs  mod.rs  tools.rs  types.rs
src/tests/: dep.toml  mod.rs  pkg_lib.toml
